fix overlapping project highlights on mobile

--- a/src/styles/pages/projects.css
+++ b/src/styles/pages/projects.css
@@ -14,6 +14,14 @@
   margin: 1rem 0;
 }
 
+@media (max-width: 999px) {
+  .highlights__container {
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+  }
+}
+
 /* Tech Stack Skills  -------------------- */
 .projects__skills-container {
     text-align: center;
